[gd_scene load_steps=10 format=3 uid="uid://deix8tkf2nx1w"]

[ext_resource type="Texture2D" uid="uid://b577yjiqeo85w" path="res://livingroom/shelfWall/wall.PNG" id="1_jjlh2"]
[ext_resource type="Script" uid="uid://cjvik25pddjj2" path="res://scripts/shelfLivingroom.gd" id="1_s5nxc"]
[ext_resource type="Texture2D" uid="uid://6rfnamot4js3" path="res://livingroom/shelfWall/shelfBgLivingRoom.PNG" id="2_1iok3"]
[ext_resource type="Texture2D" uid="uid://dses6wp3tl2wr" path="res://livingroom/shelfWall/shelfOpen.PNG" id="3_axnop"]
[ext_resource type="Texture2D" uid="uid://do5kn35ly4ufq" path="res://livingroom/shelfWall/chicken.PNG" id="4_3kn48"]
[ext_resource type="Texture2D" uid="uid://dmodjuwjvy6rp" path="res://livingroom/shelfWall/Paint Layer 9.PNG" id="5_8bqht"]
[ext_resource type="Texture2D" uid="uid://cuwsbcp4kxctn" path="res://livingroom/shelfWall/string.PNG" id="6_q1hpk"]
[ext_resource type="Texture2D" uid="uid://bwo6ccfn1jc33" path="res://livingroom/shelfWall/plant.PNG" id="7_lnf5p"]
[ext_resource type="PackedScene" uid="uid://bfgf2cqi0s3hj" path="res://main.tscn" id="8_hwwy8"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s5nxc")

[node name="wall" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_jjlh2")

[node name="bg" type="TextureRect" parent="."]
offset_top = 13.0
offset_right = 1920.0
offset_bottom = 1093.0
texture = ExtResource("2_1iok3")

[node name="shelfOpen" type="TextureRect" parent="bg"]
visible = false
layout_mode = 0
offset_left = 434.0
offset_top = 126.0
offset_right = 927.0
offset_bottom = 316.0
texture = ExtResource("3_axnop")

[node name="chicken" type="TextureRect" parent="bg/shelfOpen"]
layout_mode = 0
offset_left = 168.0
offset_top = 29.0
offset_right = 387.0
offset_bottom = 166.0
texture = ExtResource("4_3kn48")

[node name="PaintLayer9" type="Sprite2D" parent="bg"]
position = Vector2(596, 515)
texture = ExtResource("5_8bqht")

[node name="String" type="Sprite2D" parent="bg"]
position = Vector2(582, 764)
texture = ExtResource("6_q1hpk")

[node name="chest" type="Button" parent="bg"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 429.0
offset_top = 119.0
offset_right = 936.0
offset_bottom = 311.0

[node name="mortar" type="Button" parent="bg"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 431.0
offset_top = 330.0
offset_right = 930.0
offset_bottom = 580.0

[node name="paintbrush" type="Button" parent="bg"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 440.0
offset_top = 613.0
offset_right = 922.0
offset_bottom = 798.0

[node name="Plant" type="Sprite2D" parent="."]
position = Vector2(1361, 478)
texture = ExtResource("7_lnf5p")

[node name="main" parent="." instance=ExtResource("8_hwwy8")]

[connection signal="pressed" from="bg/chest" to="." method="_on_chest_pressed"]
[connection signal="pressed" from="bg/mortar" to="." method="_on_mortar_pressed"]
[connection signal="pressed" from="bg/paintbrush" to="." method="_on_paintbrush_pressed"]
